# 2023-cpp-experiments

./: README.md
composite/: CMakeLists.txt  Composite.cpp  Composite.tests.cpp  Data.h
dynamic-std/: CMakeLists.txt  CMakeUserPresets.json  dvector.hpp  dvector.tests.cpp  raw_vector.cpp  raw_vector.hpp  raw_vector.tests.cpp  sandbox.cpp  stateful_fn.hpp  stateful_fn.test.cpp
gtest/: CMakeLists.txt  main.cpp
imperative-composite/: CMakeLists.txt  Data.h  Printer.h  main.cpp
rival-module-builder/: CMakeLists.txt  README.md  main.cpp  rival-module-builder.h
rival-module-builder/templates/: module.template.hpp
rival-parameter/: CMakeLists.txt  main.cpp
training/: CMakeLists.txt  CMakeUserPresets.json  helpers.hpp  tp.cpp  vector-impl-tests.cpp  vector-impl.h
